--- a/Translation/Translation.html
+++ b/Translation/Translation.html
@@ -1,1 +1,89 @@
+ Google Cloud Fundamentals :Getting started with Compute Engine
+
+
+Objectives:
+
+You'll learn how to Create the following in the Google Cloud Platform
+
+
+Create a Compute Engine virtual machine using the  Google Cloud Platform (GCP).
+
+Create a Compute Engine Virtual machine using the gcloud command-line interface.
+
+Connect between the two instances.
+
+Create a virtual machine using the command line 
+
+Steps:
+
+Create a virtual machine using the Google Cloud Platform(GCP) console.
+
+gcloud  compute instances create my-vm-1 --machine-type "n1-standard-1" --image-project "debian-cloud" --image "debian-9-streach-v2020315" --subnet "debian" --tags http.
+
+
+Create a virtual machine using the gcloud command-line.
+
+gcloud config set compute/zone us-central1-b
+
+gcloud  compute instances create my-vm-2 --machine-type "n1-standard-1" --image-project "debian-cloud" --image "debian-9-streach-v2020315" --subnet "debian" --tags http.
+
+
+Connect between the two instances.
+
+Use the ping command to confirm that my-vm-2 can reach my-vm-1 over the other network.
+
+Connect to vm-2:
+
+gcloud ssh my-vm-2
+
+Ping my-vm-1 to my-vm-2:
+
+ping -c  4 my-vm-1
+
+Use the ssh command to command prompt on my-vm-1 to my-vm-2:
+
+ssh my-vm-1
+
+At the command prompt on my-vm-1, install the nginx web server:
+
+sudo apt-get install Nginx-light-y
+
+Use nano text editor for message to add a custom image to the homepage server:
+
+sudo nano /var/www/html/index.nginx-debian.html
+
+Add this text, and replace it with YOUR_NAME:
+
+Hi from Andrew
+
+Exit from the the text editor and confirm that the web server is serving the application a new page. At the command prompt on my-vm-1, execute this command
+
+curl http://localhost/
+
+Result:
+
+The response will be the HTML source of the web server's home page, including your line of custom text.
+
+To exit the command prompt on my-vm-1, execute this command:
+
+exit
+
+Confirm that my-vm-2 can reach my-vm-1 on the web server, at the command prompt on my-vm-2, execute this command
+
+curl http://my-vm-1/
+
+Get my external IP of my-vm-1 instance from this command:
+
+gcloud compute instances list
+
+Paste the copied IP address of my-vm-1 into a new browser tab and hit Enter
+
+gcloud compute instance --list us-central1-b
+
+
+
+
+
+
+
 
